Fixed bug with font-family in the bio field on firefox

--- a/slug_trade/static/css/styles.css
+++ b/slug_trade/static/css/styles.css
@@ -778,6 +778,8 @@ input[type=submit]:hover {
   height: 150px;
   box-sizing: border-box;
   padding: 20px;
+  font-size: inherit;
+  font-family: inherit;
 }
 
 .location-wrapper {
